@@ -1,4 +1,4 @@
-use 5.14.0;
+use 5.16.0;
 
 package Map::Metro::Plugin::Map::Copenhagen;
 
@@ -17,9 +17,6 @@ sub map_version {
 sub map_package {
     return __PACKAGE__;
 }
-
-1;
-
 
 1;
 
